fix node tolerations

--- a/teams/team-burnham/dev/templates/burnham.yaml
+++ b/teams/team-burnham/dev/templates/burnham.yaml
@@ -97,11 +97,11 @@ spec:
               cpu: 250m
               memory: 50Mi
       {{ if .Values.spec.karpenterInstanceProfile }}
-      nodeSelector:
-        team: burnham
-        type: karpenter
-      tolerations:
-        - key: 'burnham'
-          operator: 'Exists'
-          effect: 'NoSchedule'
+      #nodeSelector:
+      #  team: burnham
+      #  type: karpenter
+      #tolerations:
+      #  - key: 'burnham'
+      #    operator: 'Exists'
+      #    effect: 'NoSchedule'
       {{ end }}
